# proxima

./: .dockerfile  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .queue_id  404.html  CHANGELOG.md  LICENSE  Link Proxies pseudocode.rtf  README.md  RESOLVE_queue_proxies v2.py  RESOLVE_queue_proxies-old.py  RESOLVE_queue_proxies.py  Start Celery Worker.lnk  app_settings.py  get_resolve_jobs.py  index.html  link_proxies.py  link_proxies_v2.py  mkdocs.yml  monitor.py  purge_queue.bat  pyproject.toml  python_get_resolve.py  requirements.txt  run_celery.bat  start_single_worker.bat  start_worker.bat  start_workers.py  version_constraint_key
.github/: FUNDING.yml  issue-branch.yml
.github/workflows/: ci-create-issue-branch.yml  ci-docs.yml  ci-export-requirements.yml  ci-push-extras.yml  ci-push-vc-key.yml  ci-queue-id.yml  ci-semantic-release.yml  ci-update-docs.yml  ci-vc-key.yml  ci.yml  gh-page-deploy.yml  workflow.yml
Development/Road Map/: index.html
Development/contributing/: index.html
Development/philosophy/: index.html
User Guide/Getting Started/: index.html
User Guide/Installation/: index.html
common/: constants.py  helpers.py  settings_manager.py
distributor/: celery.py  config.yml  run_tasks.py  tasks.py
docs/: gen_ref_pages.py  index.md
docs/Development/: Overview.md  Road Map.md  contributing.md  philosophy.md
docs/User Guide/: Getting Started.md  Installation.md
docs/images/: proxima_logo_design.afphoto
handlers/: proxy_handlers.py
helpers/: proxy_helpers.py
overrides/partials/: comments.html
proxima/: __init__.py
proxima/app/: __init__.py  broker.py  celery.py  checks.py  cli.py  core.py  exceptions.py  link.py  resolve.py  shared.py
proxima/app/utils/: core.py  pkg_info.py
proxima/celery/: launch_workers.py  shared.py  tasks.py
proxima/celery/ffmpeg/: __init__.py  utils.py
proxima/cli/: __init__.py  main.py
proxima/queuer/: batch.py  batch_handler.py  handlers.py  job.py  jobs.py  link.py  media_pool_index.py  queue.py  resolve.py
proxima/settings/: __init__.py  default_settings.yml  manager.py  schema.py
proxima/tests/: test_checks.py
proxima/types/: job.py  media_pool_index.py
proxima/worker/: __init__.py  celery.py  launch_workers.py  tasks.py  utils.py
proxima/worker/ffmpeg/: ffmpeg_process.py  utils.py
proxima/worker/tasks/encode/: tasks.py
proxy_encoder/: __init__.py  celery.py  celery_settings-sample.py  celery_settings.py  config.yml  helpers.py  reference_old_encoder_logic.py  render_log.txt  tasks.py
resolve_proxy_encoder/: __init__.py  __main__.py  checks.py  cli.py  helpers.py  link_proxies.py  python_get_resolve.py  resolve_queue_proxies.py  start_monitor.bat  start_workers.py
resolve_proxy_encoder/app/: broker.py  checks.py  cli.py
resolve_proxy_encoder/app/utils/: core.py  pkg.py  pkg_info.py
resolve_proxy_encoder/proxy_encoder/: celery.py  config.yml  docker-compose.yml  tasks.py
resolve_proxy_encoder/queuer/: chunking.py  handlers.py  link.py  queue.py  resolve.py
resolve_proxy_encoder/settings/: app_settings.py  default.yml  default_config.yml  default_settings.yml  manager.py  schema.py  settings_schema.py  system.yml
resolve_proxy_encoder/utils/: chunking.py  general.py  package.py
resolve_proxy_encoder/worker/: celery.py  helpers.py  launch_workers.py  utils.py
resolve_proxy_encoder/worker/ffmpeg/: __init__.py  ffmpeg_process.py  utils.py
resolve_proxy_encoder/worker/tasks/chunking/: tasks.py
resolve_proxy_encoder/worker/tasks/encode/: tasks.py
resolve_proxy_encoder/worker/tasks/standard/: tasks.py
search/: search_index.json
src/: version_constraint_key
src/proxima/: __init__.py
src/proxima/app/: checks.py  core.py  globals.py  link.py  package.py  resolve.py
src/proxima/celery/: __init__.py  celery.py  launch_workers.py  shared.py  tasks.py
src/proxima/celery/ffmpeg/: ffmpeg_process.py  utils.py
src/proxima/cli/: main.py  queue.py
src/proxima/settings/: __init__.py  default_settings.toml  manager.py  schema.py  user_settings.toml
src/proxima/tests/: test_checks.py
src/proxima/types/: batch.py  job.py  media_pool_index.py
