[tool.poetry]
name = "resolve-proxy-encoder"
version = "0.1.0"
description = "Transcode source media in DaVinci Resolve using multiple machines. Great for quickly creating proxies without interrupting work."
authors = ["Caleb Trevatt <in03@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2,<3.7.*"
celery = "^5.1.2"
rich = "^10.12.0"
ffmpy = "^0.3.0"
typer = "^0.4.0"
pyfiglet = "^0.8.post1"
win10toast = "^0.9"
PyYAML = "^6.0"
redis = "^3.5.3"
icecream = "^2.1.1"
notify-py = "^0.3.3"
pydantic = "^1.8.2"
"ruamel.yaml" = "^0.17.17"
confuse = "^1.7.0"

[tool.poetry.dev-dependencies]
mkdocs-material = "^7.3.6"
black = "^21.12b0"
isort = "^5.10.1"
pre-commit = "^2.16.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rprox = "resolve_proxy_encoder.cli:main"